--- a/blog-details.html
+++ b/blog-details.html
@@ -8,7 +8,7 @@
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/images/favicon.ico">
 
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-     <!-- Header Section Start -->
+    <!-- Header Section Start -->
     <div class="header header-transparent-bg section-fluid">
 
         <!-- Header Wrapper Start -->
@@ -220,46 +220,55 @@
                             <!-- Page Breadcrumbs Start -->
                             <ul class="page-breadcrumb">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="projects.html">Works</a></li>
-                                <li>Nordic Interior STyle</li>
+                                <li><a href="projects.html">Blog</a></li>
+                                <li>Noida</li>
                             </ul>
                             <!-- Page Breadcrumbs End -->
 
                             <!-- Title Start -->
-                            <h1 class="title">Nordic Interior Style</h1>
+                            <h1 class="title">Noida</h1>
                             <!-- Title End -->
 
                             <!-- Info List Start -->
                             <ul class="info-list">
-                                <li>Dec 23, 2021</li>
-                                <li>news</li>
+
                             </ul>
                             <!-- Info List End -->
 
                             <!-- Big Text Start -->
-                            <div class="big-text">To mark the first UK show of artist <br> Henri Barande, graphic designer Alex Maxell and German studio Schultzschultz have created <br> The Lodge Wooden</div>
+                            <div class="big-text">County Group – Residential Projects in Noida
+                            </div>
                             <!-- Big Text End -->
 
-                            <p>This response is important for our ability to learn from mistakes, but it also <br> gives rise to self-criticism, because it is part of the threat-protection system. In other words, what keeps us safe can go too far, and keep us too safe. In fact <br> it can trigger self-censoring.</p>
+                            <p>County Group offers Noida’s most user-friendly, experienced, and comfortable residential
+                                project in prime regions of Noida. County Group prides itself on modernist architectural
+                                features, including spacious housing and modern facilities, which guarantee an upscale
+                                lifestyle for every resident in its peaceful and joyous community.</p>
 
                             <!-- List Style One Start -->
                             <ul class="list-style-one">
-                                <li>Welsh novelist Sarah Waters sums it up eloquently</li>
-                                <li>In their classic book, Creativity in Business, based on a popular course they co-taught</li>
-                                <li>Novelist and screenwriter Steven Pressfield</li>
-                                <li>A possible off-the-wall idea or solution appears like a blip and disappears without us</li>
+                                <li>Cleo County, Sector 121, Noida</li>
+                                <li>County 107, Sector 107, Noida</li>
+                                <li>Ivy County, Sector 75, Noida</li>
+                                <li>Ivory County Gold, Sector 115, Noida</li>
                             </ul>
                             <!-- List Style One End -->
 
                             <!-- Sub Title Start -->
-                            <h3 class="sub-title">Defaulting to Mindfulness</h3>
+                            <h3 class="sub-title">Best Sectors in Noida</h3>
                             <!-- Sub Title End -->
 
-                            <p>Everything along the way, to and from, fascinated her: every pebble, ant, stick, leaf, blade of grass, and crack in the sidewalk was something to be picked up, looked at, tasted, smelled, and shaken. Everything was interesting to her. She knew nothing. <br>I knew everything…been there, done that. She was in the moment, I was in the past. She was mindful. I was mindless.</p>
+                            <p>County Group Noida’s projects are located strategically and conveniently in the prime
+                                sectors of Noida so that all the essentials are handy to the residents. Commercial
+                                areas, business hubs, healthcare services, and educational institutions are all nearby
+                                and within a short distance.</p>
 
                             <!-- BlockQuote -->
                             <blockquote class="blockquote">
-                                <p>Our greatest weakness lies in giving up. The most certain way to succeed is always to try just one more time.</p>
+                                <p>Our projects are situated in the vibrant, well-connected, or central neighborhoods to
+                                    keep the client close to the major landmarks of the city while ensuring serenity and
+                                    calm, which Noida offers. Have the best of both worlds with smooth accessibility and
+                                    relaxing surroundings.</p>
                                 <footer class="blockquote-footer">
                                     <h2 class="title-name">John Doe</h2>
                                     <h4 class="title-desig">Project Director</h4>
@@ -267,7 +276,9 @@
                             </blockquote>
                             <!-- End BlockQuote -->
 
-                            <p>Both of these assumptions, of course, could be entirely false. Self-censoring is firmly rooted in our experiences with mistakes in the past and not the present. The brain messages arising from those experiences can be deceptive. </p>
+                            <p>Both of these assumptions, of course, could be entirely false. Self-censoring is firmly
+                                rooted in our experiences with mistakes in the past and not the present. The brain
+                                messages arising from those experiences can be deceptive. </p>
 
                             <!-- Post Share Options Start -->
                             <div class="post-share-options">
@@ -279,9 +290,12 @@
                                         <li><a href="#">Structure,</a></li>
                                     </ul><br>
                                     <ul class="social-box">
-                                        <li class="facebook"><a href="#"><span class="ion-social-facebook"></span></a></li>
-                                        <li class="twitter"><a href="#"><span class="ion-social-twitter"></span></a></li>
-                                        <li class="linkedin"><a href="#"><span class="ion-social-google"></span></a></li>
+                                        <li class="facebook"><a href="#"><span class="ion-social-facebook"></span></a>
+                                        </li>
+                                        <li class="twitter"><a href="#"><span class="ion-social-twitter"></span></a>
+                                        </li>
+                                        <li class="linkedin"><a href="#"><span class="ion-social-google"></span></a>
+                                        </li>
                                         <li class="rss"><a href="#"><span class="ion-social-rss"></span></a></li>
                                     </ul>
                                 </div>
@@ -317,14 +331,16 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-10" data-aos="fade-up" data-aos-delay="300">
                         <div class="news-block">
                             <div class="image">
-                                <a href="blog-details.html"><img class="fit-image" src="assets/images/news/1.jpg" alt="News Image"></a>
+                                <a href="blog-details.html"><img class="fit-image"
+                                        src="assets/images/news/aerial-view-of-modern-city-center-with-skyscrapers-downtown-jakarta-at-night.jpg"
+                                        alt="News Image"></a>
                             </div>
                             <div class="lower-content">
                                 <ul class="info-list">
-                                    <li>Jan 28, 2021</li>
-                                    <li>news</li>
+
                                 </ul>
-                                <h4 class="title"><a href="blog-details.html">The Way Of Building</a></h4>
+                                <h4 class="title"><a href="blog-details.html">Noida
+                                        Projects</a></h4>
                             </div>
                         </div>
                     </div>
@@ -334,14 +350,15 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-10" data-aos="fade-up" data-aos-delay="500">
                         <div class="news-block">
                             <div class="image">
-                                <a href="blog-details.html"><img class="fit-image" src="assets/images/news/2.jpg" alt="News Image"></a>
+                                <a href="blog-details.html"><img class="fit-image"
+                                        src="assets/images/news/singapore-skyline.jpg" alt="News Image"></a>
                             </div>
                             <div class="lower-content">
                                 <ul class="info-list">
-                                    <li>Mar 08, 2021</li>
-                                    <li>inspiration</li>
+
                                 </ul>
-                                <h4 class="title"><a href="blog-details.html">The Arch In Modern Architecture, Art & Aesthetic More</a></h4>
+                                <h4 class="title"><a href="blog-details.html">Noida Extension
+                                    </a></h4>
                             </div>
                         </div>
                     </div>
@@ -351,14 +368,16 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-10" data-aos="fade-up" data-aos-delay="700">
                         <div class="news-block">
                             <div class="image">
-                                <a href="blog-details.html"><img class="fit-image" src="assets/images/news/3.jpg" alt="News Image"></a>
+                                <a href="blog-details.html"><img class="fit-image"
+                                        src="assets/images/news/beautiful-architecture-building-exterior-city-in-kuala-lumpur-sk.jpg"
+                                        alt="News Image"></a>
                             </div>
                             <div class="lower-content">
                                 <ul class="info-list">
-                                    <li>Apr 18, 2021</li>
-                                    <li>tips &amp; tricks</li>
+
                                 </ul>
-                                <h4 class="title"><a href="blog-details.html">Spiral Stair, New Interior Design Trends 2020</a></h4>
+                                <h4 class="title"><a href="blog-details.html"> New Delhi
+                                    </a></h4>
                             </div>
                         </div>
                     </div>
@@ -376,8 +395,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="old-new-post-content  mb-n6">
-                        <a class="old-post mb-6" href="#" data-aos="fade-right" data-aos-delay="300">Older<span>The Way Of Building</span></a>
-                        <a class="new-post mb-6" href="#" data-aos="fade-left" data-aos-delay="300">Newer<span>Spiral Stair, New Interior Design Trends 2021</span></a>
+                        <a class="old-post mb-6" href="#" data-aos="fade-right" data-aos-delay="300">Older<span>The Way
+                                Of Building</span></a>
+                        <a class="new-post mb-6" href="#" data-aos="fade-left" data-aos-delay="300">Newer<span>Spiral
+                                Stair, New Interior Design Trends 2021</span></a>
                     </div>
                 </div>
             </div>
@@ -400,24 +421,29 @@
                     <form method="post" action="blog.html">
                         <div class="row clearfix mb-n6">
 
-                            <div class="col-lg-6 col-md-6 col-sm-12 form-group" data-aos="fade-right" data-aos-delay="300">
+                            <div class="col-lg-6 col-md-6 col-sm-12 form-group" data-aos="fade-right"
+                                data-aos-delay="300">
                                 <input type="text" name="username" placeholder="Name *" required="">
                             </div>
 
-                            <div class="col-lg-6 col-md-6 col-sm-12 form-group" data-aos="fade-left" data-aos-delay="300">
+                            <div class="col-lg-6 col-md-6 col-sm-12 form-group" data-aos="fade-left"
+                                data-aos-delay="300">
                                 <input type="email" name="email" placeholder="Email *" required="">
                             </div>
 
-                            <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-aos="fade-up" data-aos-delay="300">
+                            <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-aos="fade-up"
+                                data-aos-delay="300">
                                 <input type="text" name="subject" placeholder="Subject (Optinal)" required="">
                             </div>
 
-                            <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-aos="fade-up" data-aos-delay="300">
+                            <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-aos="fade-up"
+                                data-aos-delay="300">
                                 <textarea class="darma" name="message" placeholder="Message"></textarea>
                             </div>
 
                             <div class="col-lg-12 col-md-12 col-sm-12 form-group">
-                                <button class="btn btn-primary btn-hover-dark" type="submit" name="submit-form"><span class="txt">Post Comments</span></button>
+                                <button class="btn btn-primary btn-hover-dark" type="submit" name="submit-form"><span
+                                        class="txt">Post Comments</span></button>
                             </div>
 
                         </div>
@@ -430,7 +456,7 @@
     </div>
     <!-- End Blog Comment Section -->
 
-     <!-- Main Footer -->
+    <!-- Main Footer -->
     <footer class="section section-padding-top bg-light overflow-hidden">
         <div class="container-fluid">
             <div class="row">
@@ -457,7 +483,8 @@
                         Branch office- KO-003, <br> Sector - 116, Noida, Opposite Ivory County <br> <a
                             href="tel:+012-345-6789-00"><i class="fa-solid fa-phone-volume"></i>
                             +91 9811021105,
-                            +91 9811021104</a> <br> <a href="mailto:hello@consulte.co"><i class="fa-regular fa-envelope"></i> sarasrealty@gmail.como</a></div>
+                            +91 9811021104</a> <br> <a href="mailto:hello@consulte.co"><i
+                                class="fa-regular fa-envelope"></i> sarasrealty@gmail.como</a></div>
                     <!-- Contact Info End -->
 
                     <!-- Footer Social Icons Start -->
@@ -466,7 +493,7 @@
                         <li><a href="#" class="icofont-twitter"></a></li>
                         <li><a href="#" class=""><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#" class="icofont-linkedin"></a></li>
-                      
+
                     </ul>
                     <!-- Footer Social Icons End -->
 
