--- a/project-details.html
+++ b/project-details.html
@@ -203,7 +203,7 @@
     <div class="section">
         <div class="project-banner-section">
             <div class="image">
-                <img class="fit-image" src="assets/images/project/project-details/large-project.jpg" alt="Project">
+                <img class="fit-image" src="assets/images/slider/observation-urban-building-business-steel_1127-2397.avif" alt="Project">
             </div>
         </div>
     </div>
@@ -251,13 +251,13 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="image">
-                                        <img class="fit-image" src="assets/images/project/project-details/slide-1.jpg"
+                                        <img class="fit-image" src="assets/images/slider/observation-urban-building-business-steel_1127-2397.avif"
                                             alt="Project Image">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="image">
-                                        <img class="fit-image" src="assets/images/project/project-details/slide-1.jpg"
+                                        <img class="fit-image" src="assets/images/slider/Ivory-County-Noida-1.jpg"
                                             alt="Project Image">
                                     </div>
                                 </div>
