--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <title>Saras_Realty Project</title>
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/images/favicon.ico">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -64,7 +64,9 @@
                             <!-- Header Logo Start -->
                             <div class="header-logo">
                                 <a href="index.html">
-                                    <img class="fit-image" src="assets/images/logo/Saras_Realty_black-removebg-preview.png" alt="Header Logo">
+                                    <img class="fit-image"
+                                        src="assets/images/logo/Saras_Realty_black-removebg-preview.png"
+                                        alt="Header Logo">
                                 </a>
                             </div>
                             <!-- Header Logo End -->
@@ -235,9 +237,9 @@
                 <div class="messonry-button text-center mb-10">
                     <button data-filter="*" class="is-checked port-filter">All</button>
                     <button data-filter=".cat-1" class="port-filter">Residentials</button>
-                    <button data-filter=".cat-2" class="port-filter">Commercials</button>
-                    <button data-filter=".cat-3" class="port-filter">Architecture</button>
-                    <button data-filter=".cat-4" class="port-filter">Interior</button>
+                    <button data-filter=".cat-2" class="port-filter">Residentials</button>
+                    <button data-filter=".cat-3" class="port-filter">Residentials</button>
+                    <button data-filter=".cat-4" class="port-filter">Residentials</button>
                 </div>
                 <!-- project Menu End -->
 
@@ -252,7 +254,7 @@
                     <div class="single-project-wrap">
                         <div class="project-thumb position-relative m-0">
                             <a class="image" href="project-details.html">
-                                <img src="assets/images/slider/observation-urban-building-business-steel_1127-2397.avif" alt="project Image">
+                                <img src="assets/images/slider/County-Street.jpg" alt="project Image">
                             </a>
                         </div>
                         <div class="inner-content">
@@ -300,7 +302,34 @@
                     <div class="single-project-wrap">
                         <div class="project-thumb position-relative m-0">
                             <a class="image" href="project-details.html">
-                                <img src="assets/images/gallery/Noida.jpg" alt="project Image">
+                                <img src="assets/images/news/Coco-County (1).jpg"  style="height: 195px;" alt="project Image">
+                            </a>
+                        </div>
+                        <div class="inner-content">
+                            <div class="sub-title">Sector 10, Greater Noida West</div>
+                            <h4 class="title"><a href="project-details.html">Coco County</a></h4>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single project End -->
+                <div class="col cat-1 cat-3 mb-10">
+                    <div class="single-project-wrap">
+                        <div class="project-thumb position-relative m-0">
+                            <a class="image" href="project-details.html">
+                                <img src="assets/images/news/Cherry-County (1).jpg" style="height: 195px;" alt="project Image">
+                            </a>
+                        </div>
+                        <div class="inner-content">
+                            <div class="sub-title">Techzone 4, Greater Noida West</div>
+                            <h4 class="title"><a href="project-details.html">Cherry County</a></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col cat-1 cat-4 mb-10">
+                    <div class="single-project-wrap">
+                        <div class="project-thumb position-relative m-0">
+                            <a class="image" href="project-details.html">
+                                <img src="assets/images/slider/Cleo-County-1.jpg"  style="height: 195px;" alt="project Image">
                             </a>
                         </div>
                         <div class="inner-content">
@@ -309,38 +338,24 @@
                         </div>
                     </div>
                 </div>
-                <!-- Single project End -->
-
                 <!-- Single project Start -->
                 <div class="col cat-2 cat-1 mb-10">
                     <div class="single-project-wrap">
                         <div class="project-thumb position-relative m-0">
                             <a class="image" href="project-details.html">
-                                <img src="assets/images/gallery/6.jpg" alt="project Image">
+                                <img src="assets/images/gallery/Orange-County.jpg" alt="project Image">
                             </a>
                         </div>
                         <div class="inner-content">
-                            <div class="sub-title">Architecture</div>
-                            <h4 class="title"><a href="project-details.html">Noida Extension</a></h4>
+                            <div class="sub-title">Ahinsa Khand, Indirapuram, Ghaziabad</div>
+                            <h4 class="title"><a href="project-details.html">Orange County</a></h4>
                         </div>
                     </div>
                 </div>
                 <!-- Single project End -->
 
                 <!-- Single project Start -->
-                <div class="col cat-1 cat-4 mb-10">
-                    <div class="single-project-wrap">
-                        <div class="project-thumb position-relative m-0">
-                            <a class="image" href="project-details.html">
-                                <img src="assets/images/slider/Cleo-County-1.jpg" alt="project Image">
-                            </a>
-                        </div>
-                        <div class="inner-content">
-                            <div class="sub-title">Sector 121, Noida</div>
-                            <h4 class="title"><a href="project-details.html">Cleo County</a></h4>
-                        </div>
-                    </div>
-                </div>
+
                 <!-- Single project End -->
 
                 <!-- Single project Start -->
@@ -348,12 +363,12 @@
                     <div class="single-project-wrap">
                         <div class="project-thumb position-relative m-0">
                             <a class="image" href="project-details.html">
-                                <img src="assets/images/gallery/8.jpg" alt="project Image">
+                                <img src="assets/images/news/Olive-County.jpg" alt="project Image">
                             </a>
                         </div>
                         <div class="inner-content">
-                            <div class="sub-title">Architecture</div>
-                            <h4 class="title"><a href="project-details.html">New Delhi</a></h4>
+                            <div class="sub-title">Sector 5, Vasundhara, Ghaziabad</div>
+                            <h4 class="title"><a href="project-details.html">Olive County</a></h4>
                         </div>
                     </div>
                 </div>
@@ -364,11 +379,12 @@
                     <div class="single-project-wrap">
                         <div class="project-thumb position-relative m-0">
                             <a class="image" href="project-details.html">
-                                <img src="assets/images/gallery/9.jpg" alt="project Image">
+                                <img src="assets/images/news/DeWatermark.ai_1749497612437-1.jpeg" height="150px" alt="project Image">
                             </a>
                         </div>
                         <div class="inner-content">
-                            <div class="sub-title">Residentials</div>
+                            <div class="sub-title">sector-8 Wave City, NH-24, Ghaziabad</div>
+                           
                             <h4 class="title"><a href="project-details.html">Jade County</a></h4>
                         </div>
                     </div>
@@ -376,19 +392,7 @@
                 <!-- Single project End -->
 
                 <!-- Single project Start -->
-                <div class="col cat-1 cat-3 mb-10">
-                    <div class="single-project-wrap">
-                        <div class="project-thumb position-relative m-0">
-                            <a class="image" href="project-details.html">
-                                <img src="assets/images/gallery/10.jpg" alt="project Image">
-                            </a>
-                        </div>
-                        <div class="inner-content">
-                            <div class="sub-title">Commercial</div>
-                            <h4 class="title"><a href="project-details.html">Liberty University, Poland</a></h4>
-                        </div>
-                    </div>
-                </div>
+
                 <!-- Single project End -->
 
             </div>
@@ -409,7 +413,7 @@
     </div>
     <!-- project Section End Here -->
 
-       <!-- Main Footer -->
+    <!-- Main Footer -->
     <footer class="section section-padding-top bg-light overflow-hidden">
         <div class="container-fluid">
             <div class="row">
@@ -436,7 +440,8 @@
                         Branch office- KO-003, <br> Sector - 116, Noida, Opposite Ivory County <br> <a
                             href="tel:+012-345-6789-00"><i class="fa-solid fa-phone-volume"></i>
                             +91 9811021105,
-                            +91 9811021104</a> <br> <a href="mailto:hello@consulte.co"><i class="fa-regular fa-envelope"></i> sarasrealty@gmail.como</a></div>
+                            +91 9811021104</a> <br> <a href="mailto:hello@consulte.co"><i
+                                class="fa-regular fa-envelope"></i> sarasrealty@gmail.como</a></div>
                     <!-- Contact Info End -->
 
                     <!-- Footer Social Icons Start -->
@@ -445,7 +450,7 @@
                         <li><a href="#" class="icofont-twitter"></a></li>
                         <li><a href="#" class=""><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#" class="icofont-linkedin"></a></li>
-                      
+
                     </ul>
                     <!-- Footer Social Icons End -->
 
